correction mobile

--- a/Components/layout/footer/footer.module.scss
+++ b/Components/layout/footer/footer.module.scss
@@ -12,3 +12,6 @@
         margin-right: 0.25rem;
     }
 }
+.isMobileFooter {
+    margin-bottom: 3rem;
+}
